# hsl-generator

./: package-lock.json  package.json  tsconfig.node.json
src/: App.tsx  global.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/interfaces/: encoding.rs
src-tauri/src/server/: command.rs  controller.rs  mod.rs  server.rs
src-tauri/src/services/: date_format.rs  mod.rs
src-tauri/src/services/encode_process/: basic.rs
src-tauri/src/services/mediainfos/: meta.rs
src/components/Buttons/: BackButton.tsx  ButtonAnimate.tsx
src/components/Cards/: ItemValidFileCard.tsx  ItemValidFileCardActions.tsx  styles.module.css
src/components/box/: Box.tsx  FlexContainer.tsx
src/components/forms/: InnerDropZone.tsx  UploadZone.tsx  helper.ts
src/components/layout/: ApplicationSettings.tsx  EnableHttpServer.tsx  LayoutHeader.tsx
src/components/mocks/: videos.ts
src/hooks/: useGeVideoFrame.ts
src/lib/: converter.ts
src/pages/: Layout.tsx
src/pages/Cast/: indeex.tsx
src/pages/Encode/: FileProcessVideoPlayer.tsx  FileToProcessingQueue.tsx  PreviewValidFiles.tsx  component.tsx  helper.ts  index.tsx  styles.module.css
src/pages/Home/: helper.tsx  index.tsx
src/pages/Home/components/: SelectCard.tsx
src/store/: FileToSubmit.store.ts  UserPreferences.store.ts  queueProcessFile.store.ts
src/types/: FileSystem.ts
